# HashModNFFBanks-IDR

./: .gitignore  LICENSE  README.md  env_to_requirements.py  environment.yml  requirements.txt  run_hashgrid_evaluation_script.sh  run_training_cuda_hash_grid.sh
code/: preprocess_cameras.py  run_evaluation.sh  run_hashgrid_evaluation_script.sh  run_hashgrid_training.sh  run_hashgrid_with_restart.sh  run_nffb_training.sh  run_training.psl  run_training_experiment.sh
code/confs/: dtu_fixed_cameras.conf  dtu_trained_cameras.conf
code/datasets/: scene_dataset.py
code/evaluation/: dtu_eval.py  eval.py  eval_disentanglement.py
code/model/: custom_embedder_decoder.py  custom_embeder_decoder.py  density_net.py  implicit_differentiable_renderer.py  loss.py  metrics.py  ray_tracing.py
code/model/hash_encoder/: CMakeLists.txt  __init__.py  backend.py  hashgridencoder.py
code/model/hash_encoder/csrc/: bindings.cpp  hashencoder.cu  hashencoder.h
code/model/hash_encoder/src/: bindings.cpp  hashencoder.cu  hashencoder.h
code/preprocess/: preprocess_cameras.py
code/scripts/: extract_plots_from_logs.py  run_evaluation.sh  run_evaluation_failsafe.ps1  run_evaluation_failsafe.sh  run_hashgrid_evaluation_script.sh  run_hashgrid_training.sh  run_nffb_training.sh  run_training_experiment.sh  run_training_failproof.sh  run_training_failsafe.ps1  run_training_failsafe.sh
code/training/: exp_runner.py  idr_train.py  run_training.sh
code/utils/: general.py  metrics.py  plots.py  rend_util.py
data/: generate_dummy_data.py
trained_models/NFFB/: readme.md
(+110 files in other folders)
